--- a/posters/posterPrintStyle.sty
+++ b/posters/posterPrintStyle.sty
@@ -165,7 +165,7 @@
     \draw[anchor=west,draw=none,fill=white] (.5cm,-.9\paperheight-3cm) rectangle (6.4cm,3cm-.9\paperheight) ; 
     \node[anchor=west] at (0,-.9\paperheight) {\color{mainTextColor}\qrcode[height=6cm]{\@deployedURL}};
 
-    \node[anchor=east,mainTextColor] at (1cm+\textwidth,-.9\paperheight) {\large\sffamily developed in \resizebox{!}{1cm}{\input{tikzLogo.tex}}};
+    \node[anchor=east,mainTextColor] at (\textwidth,-.9\paperheight) {\large\sffamily developed in \resizebox{!}{1cm}{\input{tikzLogo.tex}}};
     %  \pic[anchor=east,node distance=2cm,auto,transform shape,scale=.4] at (10,-.9\paperheight) {ximeraTikzLogo};
 \end{tikzpicture}
 \let\maketitle\othermaketitle\vspace{12cm}
@@ -238,7 +238,7 @@
     %\node[anchor=west] at (0,-.9\paperheight) {\resizebox{\textwidth}{!}{\includegraphics{cycleBanner.png}}};
     \draw[anchor=west,draw=none,fill=white] (.5cm,-.9\paperheight-3cm) rectangle (6.4cm,3cm-.9\paperheight) ; 
     \node[anchor=west] at (0,-.9\paperheight) {\color{mainTextColor}\qrcode[height=6cm]{\@deployedURL}};    
-    \node[anchor=east,mainTextColor] at (1cm+\textwidth,-.9\paperheight) {\large\sffamily developed in \resizebox{!}{1cm}{\input{tikzLogo.tex}}};
+    \node[anchor=east,mainTextColor] at (\textwidth,-.9\paperheight) {\large\sffamily developed in \resizebox{!}{1cm}{\input{tikzLogo.tex}}};
 \end{tikzpicture}
 \let\maketitle\othermaketitle\vspace{12cm}
 }
@@ -283,7 +283,7 @@
     %\node[anchor=west] at (0,-.9\paperheight) {\resizebox{\textwidth}{!}{\includegraphics{cycleBanner.png}}};
     \draw[anchor=west,draw=none,fill=white] (.5cm,-.9\paperheight-3cm) rectangle (6.4cm,3cm-.9\paperheight) ; 
     \node[anchor=west] at (0,-.9\paperheight) {\color{mainTextColor}\qrcode[height=6cm]{\@deployedURL}};    
-    \node[anchor=east,mainTextColor] at (1cm+\textwidth,-.9\paperheight) {\large\sffamily developed in \resizebox{!}{1cm}{\input{tikzLogo.tex}}};
+    \node[anchor=east,mainTextColor] at (\textwidth,-.9\paperheight) {\large\sffamily developed in \resizebox{!}{1cm}{\input{tikzLogo.tex}}};
 \end{tikzpicture}
 \let\maketitle\othermaketitle\vspace{12cm}
 }
