changed margins to work better with different size pages

--- a/posters/posterPrintStyle.sty
+++ b/posters/posterPrintStyle.sty
@@ -180,7 +180,7 @@
 %% Set column settings
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \renewcommand{\leftColumn}{%
-\def\@columnLeftMargin{-.5em}%
+\def\@columnLeftMargin{0}%
 \def\@columnRightMargin{.13\textwidth}%
 \def\columnFontSize{\small}%
 \def\columnTitleFont{\color{mainTextColor}\Large\bfseries\sffamily}
@@ -197,7 +197,7 @@
 }%
 \renewcommand{\rightColumn}{%
   \def\@columnLeftMargin{.13\textwidth}%
-  \def\@columnRightMargin{-.5em}%
+  \def\@columnRightMargin{0}%
   \def\columnFontSize{\small}%
   \def\columnTitleFont{\color{mainTextColor}\Large\bfseries\sffamily}
   \def\mainTextColor{mainTextColor}%
